qualia_derive/tests/compile-fail/only-supported-fixed-field-types.stderr
error: expected integer literal or string literal
 --> $DIR/only-supported-fixed-field-types.rs:5:32
  |
5 | #[object_fixed_fields("foo" => 4.5)]
  |                                ^^^
